[gd_scene load_steps=7 format=3 uid="uid://bmqtj6x65i4s1"]

[ext_resource type="Script" path="res://FirstPersonCharController/scripts/first_person_char_controller.gd" id="1_n3n4d"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rgkhd"]
points = PackedVector3Array(0, 0, 0.5, 0, 0, -0.5, 0.5, 0, 0, -0.5, 0, 0, 0, 1, 0, 0, -1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_76a1q"]
albedo_color = Color(0.992157, 0.313726, 0.290196, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jfwkg"]
material = SubResource("StandardMaterial3D_76a1q")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k54e4"]
albedo_color = Color(0.266667, 0.266667, 0.266667, 1)

[sub_resource type="BoxMesh" id="BoxMesh_kyt7i"]
material = SubResource("StandardMaterial3D_k54e4")
size = Vector3(0.6, 0.25, 0.25)

[node name="FirstPersonCharController" type="CharacterBody3D"]
script = ExtResource("1_n3n4d")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_rgkhd")

[node name="BodyPivot" type="Node3D" parent="."]

[node name="BodyMesh" type="MeshInstance3D" parent="BodyPivot"]
mesh = SubResource("CapsuleMesh_jfwkg")
skeleton = NodePath("../..")

[node name="VisorMesh" type="MeshInstance3D" parent="BodyPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.383138, -0.452)
layers = 16
mesh = SubResource("BoxMesh_kyt7i")

[node name="BottomPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="SpringRayCast" type="RayCast3D" parent="BottomPivot"]

[node name="GroundRayCast" type="RayCast3D" parent="BottomPivot"]

[node name="CameraRig" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.383, 0)
cull_mask = 1048559
